emit tile-load-error events

--- a/test/test.html
+++ b/test/test.html
@@ -8,7 +8,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/@allmaps/annotation@1.0.0-alpha.14/dist/annotation.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@allmaps/transform@1.0.0-alpha.3/dist/transform.min.js"></script>
-    <script src="../dist/layers.umd.js"></script>
+
+    <script src="../dist/allmaps-layers.min.js"></script>
     <style>
       body {
         position: absolute;
